--- a/DayTruyenDong.html
+++ b/DayTruyenDong.html
@@ -7,9 +7,8 @@
     <meta name="keywords" content="Yoga, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cty TNHH MTV Thế Cao</title>
+    <title>Băng tải PVC, PU, TPU</title>
     <link type="image/x-icon" rel="icon" href="./img/favicon/favicon.ico" />
-
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700&display=swap" rel="stylesheet">
@@ -49,6 +48,16 @@
         </div>
     </div>
 
+    <div class="modal">
+        <span class="close">&times;</span>
+        <div class="modal-content">
+            <div class="container-fluid" style="height: 100%;">
+                <div class="row" style="height: 100%; overflow: hidden;">
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Header Info Begin -->
     <div class="header-info">
         <div class="container-fluid">
@@ -74,25 +83,23 @@
                     <ul>
                         <li><a href="./index.html">Trang chủ</a></li>
                         <li><a href="infomation.html">Giới thiệu</a></li>
-                        <li><a href="#">Sản phẩm</a>
+                        <li><a class="active" href="#">Sản phẩm</a>
                             <ul class="sub-menu">
                                 <li><a href="./PVC.html">Băng tải PVC, PU, TPU</a></li>
                                 <li><a href="product-page.html">Băng tải chịu nhiệt</a></li>
                                 <li><a href="product-page.html">Băng tải xích nhựa</a></li>
                                 <li><a href="./PURang.html">Dây PU răng</a></li>
-                                <li><a href="./DayTruyenDong.html">Dây đai truyền động</a></li>
+                                <li><a href="#">Dây đai truyền động</a></li>
                                 <li><a href="./dinhFlexco.html">Đinh FLexco</a></li>
                             </ul>
                         </li>
-                        <li><a class="active" href="#">Dịch vụ</a></li>
+                        <li><a href="./service.html">Dịch vụ</a></li>
                         <li><a href="./contact.html">Liên hệ</a></li>
                     </ul>
                 </nav>
             </div>
         </div>
     </header>
-
-    <!-- Header End -->
 
     <!-- Hero Slider Begin -->
     <section class="hero-slider">
@@ -101,103 +108,45 @@
     </section>
     <!-- Hero Slider End -->
 
-    <!-- Service Section Begin -->
-    <div class="service-section">
+    <!-- Latest Product Begin -->
+    <section class="latest-products spad">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
-                    <h2>Dịch vụ của chúng tôi</h2>
-
-                    <ul class="col-lg-12 text-left service-list">
-                        <li>
-                            <div class="service-item" data-service="1">
-                                <p>Công ty có thể gia công ép tại ngay nhà máy xuất khẩu của khách hàng.</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="service-item" data-service="2">
-                                <p>Phân phối sỉ và lẻ cho khách hàng.</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="service-item" data-service="3">
-                                <p>Thiết kế dây chuyền theo yêu cầu bản vẽ.</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="service-item" data-service="4">
-                                <p>Hỗ trợ khách hàng tìm kiếm nguồn hàng đặc biệt với giá cả tốt nhất.</p>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-lg-6"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/fD3f2c-XM8o"
-                        title="Gia công ép băng tải tại nhà xưởng khách hàng" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                    <div class="slider-mini">
-                        <div class="slider-mini-item" style="background-image: url(./img/services/bangtaicong.png);">
-                        </div>
-                        <div class="slider-mini-item" style="background-image: url(./img/services/danbeo.jpg);"></div>
-
-                        <div class="slider-mini-item" style="background-image: url(./img/services/duclo.jpg);"></div>
-
-                        <div class="slider-mini-item" style="background-image: url(./img/services/dancaosu.jpg);"></div>
-
-                        <div class="slider-mini-item" style="background-image: url(./img/services/dango.jpg);"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Service Section End -->
-
-    <!-- Features Section Begin -->
-    <section class="features-section spad">
-        <div class="features-ads">
-            <div class="container">
+            <div class="product-filter">
                 <div class="row">
+                    <div class="col-lg-12 ">
+                        <div class="section-title text-center">
+                            <h3>Dây Truyền động</h3>
+                        </div>
 
-                    <div class="col-lg-4">
-                        <div class="single-features-ads second">
-                            <img src="./img/icons/quality.png" alt="">
-                            <h4>Chất lượng tốt</h4>
-                            <p>Tất cả mọi mặt hàng của công ty thế cao luôn đạt tiêu chuẩn của quốc tế có giấy
-                                giám
-                                định
-                                đảm bảo của các công ty cung cấp và đặc biệt rằng nhà cung cấp của thế cao luôn
-                                nằm
-                                trong top 50 trong ngành băng tải.</p>
+                        <div class="section-detail">
+                            <span>
+                                Dây curoa bản dẹt thường là chạy tốc độ cao, lớp giữa của dây là lớp nilon, bên ngoài
+                                được bọc bằng lớp cao su, da, vải sợi,... <br><br>
+                                <strong>Công ty Thế Cao</strong> đang có các loại dây từ 0.8mm đến 6mm cho dây xanh
+                                vàng, dây xăng, và
+                                dây hapasit, được nối ép trực tiếp tại xưởng Thế Cao do đó tiết kiệm được thời gian giao
+                                hàng đến cho khách.<br><br>
+                                Dây đai dẹp, dây truyền động được nhập khẩu 100% từ nước ngoài, Chúng tôi vinh dự là nhà
+                                cung cấp hàng đầu và đa dạng mẫu mã đi kèm chất lượng tốt nhất cho thị trường,ứng dụng
+                                chủ yếu trong ngành như:<br>
+                                <ul>
+                                    <li>Dệt may, dệt sợi, in ấn, bao bì giấy.</li>
+                                    <li>Sản xuất ngành gỗ.</li>
+                                    <li>Thực phẩm, chế biến thủy sản…</li>
+                                </ul>
+                            </span>
+
+
                         </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="single-features-ads third">
-                            <img src="./img/icons/technique.png" alt="">
-                            <h4>Kỹ thuật cao</h4>
-                            <p>Với Đội ngũ kỹ thuật có hơn 20 năm kinh nghiệm, chúng tôi hoan nghênh bất kỳ yêu
-                                cầu
-                                thách thức nào và phát triển mạnh trong việc cung cấp các giải pháp kỹ thuật
-                                trên
-                                nhiều
-                                loại sản phẩm của chúng tôi.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="single-features-ads first">
-                            <img src="./img/icons/f-delivery.png" alt="">
-                            <h4>Giao hàng nhanh</h4>
-                            <p>Bộ phận kỹ thuật toàn thời gian của chúng tôi luôn sẵn sàng để đảm bảo tất cả các
-                                sản phẩm đã cắt đi đúng quy cách của khách hàng vào ngày chúng được đặt hàng từ
-                                cửa
-                                hàng
-                                trực tuyến của chúng tôi.</p>
-                        </div>
+                        <div class="show-more">Xem thêm</div>
                     </div>
                 </div>
+                <div class="row product-list" id="product-list">
+
+                </div>
             </div>
-        </div>
     </section>
-    <!-- Features Section End -->
+    <!-- Latest Product End -->
 
     <!-- Logo Section Begin -->
     <div class="logo-section spad">
@@ -221,6 +170,7 @@
     </div>
     <!-- Logo Section End -->
 
+
     <!-- Footer Section Begin -->
     <footer class="footer-section spad">
         <div class="container">
@@ -231,8 +181,7 @@
                         <div class="single-footer-widget text-left">
                             <h4>Địa Chỉ</h4>
                             <ul>
-                                <li>362/109 Hiệp Thành 13, Khu Phố 7, Phường Hiệp Thành, Quận 12, Thành phố Hồ
-                                    Chí
+                                <li>362/109 Hiệp Thành 13, Khu Phố 7, Phường Hiệp Thành, Quận 12, Thành phố Hồ Chí
                                     Minh
                                 </li>
                             </ul>
@@ -308,7 +257,7 @@
     <script src="js/jquery.nice-select.min.js"></script>
     <script src="js/mixitup.min.js"></script>
     <script src="js/main.js"></script>
-    <script src="./js/service.js"></script>
+    <script src="./js/products/DayTruyenDong.js"></script>
 </body>
 
 </html>
