--- a/PURang.html
+++ b/PURang.html
@@ -33,9 +33,14 @@
 
     <div class="chat-box">
         <div class="chat-box-title">
-            <h5>Tư vấn</h5>
+            <h5>CSKH</h5>
         </div>
         <div class="chat-box-content">
+            <ul>
+            </ul>
+
+            <p>Chúng tôi có tư duy phục vụ và sẵn sàng vượt qua cả sự mong đợi của khách hàng để mang lại trải nghiệm
+                xuất sắc cho họ. </p>
 
         </div>
         <div class="chat-box-close">
@@ -84,7 +89,7 @@
                                 <li><a href="product-page.html">Băng tải chịu nhiệt</a></li>
                                 <li><a href="product-page.html">Băng tải xích nhựa</a></li>
                                 <li><a href="#">Dây PU răng</a></li>
-                                <li><a href="product-page.html">Dây đai truyền động</a></li>
+                                <li><a href="./DayTruyenDong.html">Dây đai truyền động</a></li>
                                 <li><a href="./dinhFlexco.html">Đinh FLexco</a></li>
                             </ul>
                         </li>
@@ -343,7 +348,7 @@
     <script src="js/jquery.nice-select.min.js"></script>
     <script src="js/mixitup.min.js"></script>
     <script src="js/main.js"></script>
-    <script src="./js/PURang.js"></script>
+    <script src="./js/products/PURang.js"></script>
 </body>
 
 </html>
