--- a/contact.html
+++ b/contact.html
@@ -62,12 +62,12 @@
                                 <li><a href="product-page.html">Băng tải chịu nhiệt</a></li>
                                 <li><a href="product-page.html">Băng tải xích nhựa</a></li>
                                 <li><a href="./PURang.html">Dây PU răng</a></li>
-                                <li><a href="product-page.html">Dây đai truyền động</a></li>
+                                <li><a href="./DayTruyenDong.html">Dây đai truyền động</a></li>
                                 <li><a href="./dinhFlexco.html">Đinh FLexco</a></li>
                             </ul>
                         </li>
                         <li><a href="./service.html">Dịch vụ</a></li>
-                        <li><a class="active" href="./contact.html">Liên hệ</a></li>
+                        <li><a class="active" href="#">Liên hệ</a></li>
                     </ul>
                 </nav>
             </div>
