--- a/infomation.html
+++ b/infomation.html
@@ -32,6 +32,23 @@
         <div class="loader"></div>
     </div>
 
+    <div class="chat-box">
+        <div class="chat-box-title">
+            <h5>CSKH</h5>
+        </div>
+        <div class="chat-box-content">
+            <ul>
+            </ul>
+
+            <p>Chúng tôi có tư duy phục vụ và sẵn sàng vượt qua cả sự mong đợi của khách hàng để mang lại trải nghiệm
+                xuất sắc cho họ. </p>
+
+        </div>
+        <div class="chat-box-close">
+            <i class="fa fa-times"></i>
+        </div>
+    </div>
+
 
     <!-- Header Info Begin -->
     <div class="header-info">
@@ -57,14 +74,14 @@
                 <nav class="main-menu mobile-menu">
                     <ul>
                         <li><a href="./index.html">Trang chủ</a></li>
-                        <li><a class="active" href="infomation.html">Giới thiệu</a></li>
+                        <li><a class="active" href="#">Giới thiệu</a></li>
                         <li><a href="#">Sản phẩm</a>
                             <ul class="sub-menu">
                                 <li><a href="./PVC.html">Băng tải PVC, PU, TPU</a></li>
                                 <li><a href="product-page.html">Băng tải chịu nhiệt</a></li>
                                 <li><a href="product-page.html">Băng tải xích nhựa</a></li>
                                 <li><a href="./PURang.html">Dây PU răng</a></li>
-                                <li><a href="product-page.html">Dây đai truyền động</a></li>
+                                <li><a href="./DayTruyenDong.html">Dây đai truyền động</a></li>
                                 <li><a href="./dinhFlexco.html">Đinh FLexco</a></li>
                             </ul>
                         </li>
