--- a/PVC.html
+++ b/PVC.html
@@ -30,6 +30,33 @@
     <div id="preloder">
         <div class="loader"></div>
     </div>
+
+    <div class="chat-box">
+        <div class="chat-box-title">
+            <h5>CSKH</h5>
+        </div>
+        <div class="chat-box-content">
+            <ul>
+            </ul>
+
+            <p>Chúng tôi có tư duy phục vụ và sẵn sàng vượt qua cả sự mong đợi của khách hàng để mang lại trải nghiệm
+                xuất sắc cho họ. </p>
+
+        </div>
+        <div class="chat-box-close">
+            <i class="fa fa-times"></i>
+        </div>
+    </div>
+
+    <div class="modal">
+        <span class="close">&times;</span>
+        <div class="modal-content">
+            <div class="container-fluid" style="height: 100%;">
+                <div class="row" style="height: 100%; overflow: hidden;">
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- Header Info Begin -->
     <div class="header-info">
         <div class="container-fluid">
@@ -61,7 +88,7 @@
                                 <li><a href="product-page.html">Băng tải chịu nhiệt</a></li>
                                 <li><a href="product-page.html">Băng tải xích nhựa</a></li>
                                 <li><a href="./PURang.html">Dây PU răng</a></li>
-                                <li><a href="product-page.html">Dây đai truyền động</a></li>
+                                <li><a href="./DayTruyenDong.html">Dây đai truyền động</a></li>
                                 <li><a href="./dinhFlexco.html">Đinh FLexco</a></li>
                             </ul>
                         </li>
@@ -76,61 +103,6 @@
     <!-- Hero Slider Begin -->
     <section class="hero-slider">
         <div class="hero-items owl-carousel">
-            <div class="single-slider-item set-bg" data-setbg="./img/slide/[GetPaidStock.com]-636b282deebd3.jpg">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <h1>2019</h1>
-                            <h2>Lookbook.</h2>
-                            <a href="#" class="primary-btn">See More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="single-slider-item set-bg" data-setbg="./img/slide/[GetPaidStock.com]-636b279caad49.jpg">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <h1>2019</h1>
-                            <h2>Lookbook.</h2>
-                            <a href="#" class="primary-btn">See More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="single-slider-item set-bg" data-setbg="./img/slide/[GetPaidStock.com]-636b26adbe76e.jpg">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <h1>2019</h1>
-                            <h2>Lookbook.</h2>
-                            <a href="#" class="primary-btn">See More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="single-slider-item set-bg" data-setbg="./img/slide/istockphoto-1419084424-612x612.jpg">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <h1>2019</h1>
-                            <h2>Lookbook.</h2>
-                            <a href="#" class="primary-btn">See More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="single-slider-item set-bg" data-setbg="./img/slide/bang-tai-chiu-nhiet.jpg">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <h1>2019</h1>
-                            <h2>Lookbook.</h2>
-                            <a href="#" class="primary-btn">See More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
     </section>
     <!-- Hero Slider End -->
@@ -369,6 +341,7 @@
     <script src="js/jquery.nice-select.min.js"></script>
     <script src="js/mixitup.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="./js/products/PVC.js"></script>
 </body>
 
 </html>
