--- a/dinhFlexco.html
+++ b/dinhFlexco.html
@@ -33,9 +33,14 @@
 
     <div class="chat-box">
         <div class="chat-box-title">
-            <h5>Tư vấn</h5>
+            <h5>CSKH</h5>
         </div>
         <div class="chat-box-content">
+            <ul>
+            </ul>
+
+            <p>Chúng tôi có tư duy phục vụ và sẵn sàng vượt qua cả sự mong đợi của khách hàng để mang lại trải nghiệm
+                xuất sắc cho họ. </p>
 
         </div>
         <div class="chat-box-close">
@@ -84,7 +89,7 @@
                                 <li><a href="product-page.html">Băng tải chịu nhiệt</a></li>
                                 <li><a href="product-page.html">Băng tải xích nhựa</a></li>
                                 <li><a href="./PURang.html">Dây PU răng</a></li>
-                                <li><a href="product-page.html">Dây đai truyền động</a></li>
+                                <li><a href="./DayTruyenDong.html">Dây đai truyền động</a></li>
                                 <li><a href="#">Đinh FLexco</a></li>
                             </ul>
                         </li>
@@ -99,61 +104,6 @@
     <!-- Hero Slider Begin -->
     <section class="hero-slider">
         <div class="hero-items owl-carousel">
-            <div class="single-slider-item set-bg" data-setbg="./img/slide/[GetPaidStock.com]-636b282deebd3.jpg">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <h1>2019</h1>
-                            <h2>Lookbook.</h2>
-                            <a href="#" class="primary-btn">See More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="single-slider-item set-bg" data-setbg="./img/slide/[GetPaidStock.com]-636b279caad49.jpg">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <h1>2019</h1>
-                            <h2>Lookbook.</h2>
-                            <a href="#" class="primary-btn">See More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="single-slider-item set-bg" data-setbg="./img/slide/[GetPaidStock.com]-636b26adbe76e.jpg">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <h1>2019</h1>
-                            <h2>Lookbook.</h2>
-                            <a href="#" class="primary-btn">See More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="single-slider-item set-bg" data-setbg="./img/slide/istockphoto-1419084424-612x612.jpg">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <h1>2019</h1>
-                            <h2>Lookbook.</h2>
-                            <a href="#" class="primary-btn">See More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="single-slider-item set-bg" data-setbg="./img/slide/bang-tai-chiu-nhiet.jpg">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <h1>2019</h1>
-                            <h2>Lookbook.</h2>
-                            <a href="#" class="primary-btn">See More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
     </section>
     <!-- Hero Slider End -->
@@ -320,7 +270,7 @@
     <script src="js/jquery.nice-select.min.js"></script>
     <script src="js/mixitup.min.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/DinhFlexco.js"></script>
+    <script src="./js/products/DinhFlexco.js"></script>
 </body>
 
 </html>
