--- a/service.html
+++ b/service.html
@@ -104,9 +104,9 @@
     <!-- Service Section Begin -->
     <div class="service-section">
         <div class="container">
+            <h2>Dịch vụ của chúng tôi</h2>
             <div class="row">
                 <div class="col-lg-6">
-                    <h2>Dịch vụ của chúng tôi</h2>
 
                     <ul class="col-lg-12 text-left service-list">
                         <li>
@@ -145,6 +145,15 @@
                         <div class="slider-mini-item" style="background-image: url(./img/services/dancaosu.jpg);"></div>
 
                         <div class="slider-mini-item" style="background-image: url(./img/services/dango.jpg);"></div>
+
+                        <div class="dot-slide-mini">
+
+                            <span class="active"></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
                     </div>
                 </div>
             </div>
