--- a/infomation.html
+++ b/infomation.html
@@ -75,7 +75,8 @@
                     <ul>
                         <li><a href="./index.html">Trang chủ</a></li>
                         <li><a class="active" href="#">Giới thiệu</a></li>
-                        <li><a href="#">Sản phẩm</a>
+                        <li><a class="root-menu" href="#">Sản phẩm</a>
+                            <p>Sản phẩm</p>
                             <ul class="sub-menu">
                                 <li><a href="./PVC.html">Băng tải PVC, PU, TPU</a></li>
                                 <li><a href="product-page.html">Băng tải chịu nhiệt</a></li>
