--- a/DayTruyenDong.html
+++ b/DayTruyenDong.html
@@ -83,7 +83,8 @@
                     <ul>
                         <li><a href="./index.html">Trang chủ</a></li>
                         <li><a href="infomation.html">Giới thiệu</a></li>
-                        <li><a class="active" href="#">Sản phẩm</a>
+                        <li><a class="active root-menu" href="#">Sản phẩm</a>
+                            <p>Sản phẩm</p>
                             <ul class="sub-menu">
                                 <li><a href="./PVC.html">Băng tải PVC, PU, TPU</a></li>
                                 <li><a href="product-page.html">Băng tải chịu nhiệt</a></li>
