--- a/PVC.html
+++ b/PVC.html
@@ -115,9 +115,9 @@
                 <div class="row">
                     <div class="col-lg-12 ">
                         <ul class="product-controls">
-                            <li class=" product--controls-tab active" data-filter=".pvc">PVC</li>
-                            <li class=" product--controls-tab" data-filter=".pu">PU</li>
-                            <li class=" product--controls-tab" data-filter=".tpu">TPU</li>
+                            <li class=" product--controls-tab active" data-index="0">PVC</li>
+                            <li class=" product--controls-tab" data-index="1">PU</li>
+                            <li class=" product--controls-tab" data-index="2">TPU</li>
                         </ul>
                         <div class="section-title text-center">
                             <h3>PVC</h3>
@@ -156,102 +156,7 @@
                     </div>
                 </div>
                 <div class="row product-list" id="product-list">
-                    <h2 class="col-12 text-center product-list-title">Sản phẩm <span>PVC</span></h2>
-                    <div class="col-6 col-lg-3 ">
-                        <div class="single-product-item">
-                            <figure>
-                                <a href="#"><img src="img/products/img-1.jpg" alt=""></a>
-                                <div class="p-status">new</div>
-                            </figure>
-                            <div class="product-text">
-                                <h6>Green Dress with details</h6>
-                                <p>$22.90</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-6 col-lg-3 ">
-                        <div class="single-product-item">
-                            <figure>
-                                <a href="#"><img src="img/products/img-2.jpg" alt=""></a>
-                                <div class="p-status sale">sale</div>
-                            </figure>
-                            <div class="product-text">
-                                <h6>Yellow Maxi Dress</h6>
-                                <p>$25.90</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-6 col-lg-3 ">
-                        <div class="single-product-item">
-                            <figure>
-                                <a href="#"><img src="img/products/img-3.jpg" alt=""></a>
-                                <div class="p-status">new</div>
-                            </figure>
-                            <div class="product-text">
-                                <h6>One piece bodysuit</h6>
-                                <p>$19.90</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-6 col-lg-3 ">
-                        <div class="single-product-item">
-                            <figure>
-                                <a href="#"><img src="img/products/img-4.jpg" alt=""></a>
-                                <div class="p-status popular">popular</div>
-                            </figure>
-                            <div class="product-text">
-                                <h6>Blue Dress with details</h6>
-                                <p>$35.50</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-6 col-lg-3 ">
-                        <div class="single-product-item">
-                            <figure>
-                                <a href="#"><img src="img/products/img-5.jpg" alt=""></a>
-                                <div class="p-status">new</div>
-                            </figure>
-                            <div class="product-text">
-                                <h6>Green Dress with details</h6>
-                                <p>$22.90</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-6 col-lg-3 ">
-                        <div class="single-product-item">
-                            <figure>
-                                <a href="#"><img src="img/products/img-6.jpg" alt=""></a>
-                                <div class="p-status sale">sale</div>
-                            </figure>
-                            <div class="product-text">
-                                <h6>Yellow Maxi Dress</h6>
-                                <p>$25.90</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-6 col-lg-3 ">
-                        <div class="single-product-item">
-                            <figure>
-                                <a href="#"><img src="img/products/img-7.jpg" alt=""></a>
-                            </figure>
-                            <div class="product-text">
-                                <h6>One piece bodysuit</h6>
-                                <p>$19.90</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-6 col-lg-3 ">
-                        <div class="single-product-item">
-                            <figure>
-                                <a href="#"><img src="img/products/img-8.jpg" alt=""></a>
-                                <div class="p-status popular">popular</div>
-                            </figure>
-                            <div class="product-text">
-                                <h6>Blue Dress with details</h6>
-                                <p>$35.50</p>
-                            </div>
-                        </div>
-                    </div>
+
                 </div>
             </div>
     </section>
