--- a/ChiuNhiet.html
+++ b/ChiuNhiet.html
@@ -7,9 +7,8 @@
     <meta name="keywords" content="Yoga, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cty TNHH MTV Thế Cao</title>
+    <title>Băng tải Chịu nhiệt</title>
     <link type="image/x-icon" rel="icon" href="./img/favicon/favicon.ico" />
-
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700&display=swap" rel="stylesheet">
@@ -49,6 +48,16 @@
         </div>
     </div>
 
+    <div class="modal">
+        <span class="close">&times;</span>
+        <div class="modal-content">
+            <div class="container-fluid" style="height: 100%;">
+                <div class="row" style="height: 100%; overflow: hidden;">
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Header Info Begin -->
     <div class="header-info">
         <div class="container-fluid">
@@ -74,18 +83,18 @@
                     <ul>
                         <li><a href="./index.html">Trang chủ</a></li>
                         <li><a href="infomation.html">Giới thiệu</a></li>
-                        <li><a class="root-menu" href="#">Sản phẩm</a>
+                        <li><a class="active root-menu" href="#">Sản phẩm</a>
                             <p>Sản phẩm</p>
                             <ul class="sub-menu">
                                 <li><a href="./PVC.html">Băng tải PVC, PU, TPU</a></li>
-                                <li><a href="product-page.html">Băng tải chịu nhiệt</a></li>
+                                <li><a href="#">Băng tải chịu nhiệt</a></li>
                                 <li><a href="product-page.html">Băng tải xích nhựa</a></li>
                                 <li><a href="./PURang.html">Dây PU răng</a></li>
                                 <li><a href="./DayTruyenDong.html">Dây đai truyền động</a></li>
                                 <li><a href="./dinhFlexco.html">Đinh FLexco</a></li>
                             </ul>
                         </li>
-                        <li><a class="active" href="#">Dịch vụ</a></li>
+                        <li><a href="./service.html">Dịch vụ</a></li>
                         <li><a href="./contact.html">Liên hệ</a></li>
                     </ul>
                 </nav>
@@ -93,126 +102,134 @@
         </div>
     </header>
 
-    <!-- Header End -->
-
     <!-- Hero Slider Begin -->
     <section class="hero-slider">
         <div class="hero-items owl-carousel">
+            <div class="single-slider-item set-bg" data-setbg="./img/slide/[GetPaidStock.com]-636b282deebd3.jpg">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <h1>2019</h1>
+                            <h2>Lookbook.</h2>
+                            <a href="#" class="primary-btn">See More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="single-slider-item set-bg" data-setbg="./img/slide/[GetPaidStock.com]-636b279caad49.jpg">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <h1>2019</h1>
+                            <h2>Lookbook.</h2>
+                            <a href="#" class="primary-btn">See More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="single-slider-item set-bg" data-setbg="./img/slide/[GetPaidStock.com]-636b26adbe76e.jpg">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <h1>2019</h1>
+                            <h2>Lookbook.</h2>
+                            <a href="#" class="primary-btn">See More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="single-slider-item set-bg" data-setbg="./img/slide/istockphoto-1419084424-612x612.jpg">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <h1>2019</h1>
+                            <h2>Lookbook.</h2>
+                            <a href="#" class="primary-btn">See More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="single-slider-item set-bg" data-setbg="./img/slide/bang-tai-chiu-nhiet.jpg">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <h1>2019</h1>
+                            <h2>Lookbook.</h2>
+                            <a href="#" class="primary-btn">See More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <!-- Hero Slider End -->
 
-    <!-- Service Section Begin -->
-    <div class="service-section">
+    <!-- Latest Product Begin -->
+    <section class="latest-products spad">
         <div class="container">
-            <h2>Dịch vụ của chúng tôi</h2>
-            <div class="row">
-                <div class="col-lg-6">
-
-                    <ul class="col-lg-12 text-left service-list">
-                        <li>
-                            <div class="service-item" data-service="1">
-                                <p>Công ty có thể gia công ép tại ngay nhà máy xuất khẩu của khách hàng.</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="service-item" data-service="2">
-                                <p>Hỗ trợ phát triển dự án.</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="service-item" data-service="3">
-                                <p>Phân phối sỉ và lẻ cho khách hàng.</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="service-item" data-service="4">
-                                <p>Thiết kế dây chuyền theo yêu cầu bản vẽ.</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="service-item" data-service="5">
-                                <p>Hỗ trợ khách hàng tìm kiếm nguồn hàng đặc biệt với giá cả tốt nhất.</p>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-lg-6"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/fD3f2c-XM8o"
-                        title="Gia công ép băng tải tại nhà xưởng khách hàng" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                    <div class="slider-mini">
-                        <div class="slider-mini-item" style="background-image: url(./img/services/bangtaicong.png);">
-                        </div>
-                        <div class="slider-mini-item" style="background-image: url(./img/services/danbeo.jpg);"></div>
-
-                        <div class="slider-mini-item" style="background-image: url(./img/services/duclo.jpg);"></div>
-
-                        <div class="slider-mini-item" style="background-image: url(./img/services/dancaosu.jpg);"></div>
-
-                        <div class="slider-mini-item" style="background-image: url(./img/services/dango.jpg);"></div>
-
-                        <div class="dot-slide-mini">
-
-                            <span class="active"></span>
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Service Section End -->
-
-    <!-- Features Section Begin -->
-    <section class="features-section spad">
-        <div class="features-ads">
-            <div class="container">
+            <div class="product-filter">
                 <div class="row">
+                    <div class="col-lg-12 ">
+                        <div class="section-title text-center">
+                            <h3>Băng tải Chịu nhiệt</h3>
+                        </div>
 
-                    <div class="col-lg-4">
-                        <div class="single-features-ads second">
-                            <img src="./img/icons/quality.png" alt="">
-                            <h4>Chất lượng tốt</h4>
-                            <p>Tất cả mọi mặt hàng của công ty thế cao luôn đạt tiêu chuẩn của quốc tế có giấy
-                                giám
-                                định
-                                đảm bảo của các công ty cung cấp và đặc biệt rằng nhà cung cấp của thế cao luôn
-                                nằm
-                                trong top 50 trong ngành băng tải.</p>
+                        <div class="section-detail PTFE">
+                            <span>Sản phẩm băng tải lưới chịu nhiệt được làm bằng vật liệu polytetrafluoroethylene
+                                (PTFE) Các loại vải này được sản xuất từ sợi thủy tinh dệt phủ PTFE. Những dây đai này
+                                cung cấp một bề mặt cực kỳ mịn, không dính, giải phóng tuyệt vời và chống lại dầu, mỡ và
+                                hóa chất. bông thuỷ tinh với khả năng chịu nhiệt cao, tính mềm dẻo và có thể ứng dụng
+                                vào nhiều lĩnh vực khác nhau như ngành bao bì, dệt may và nhiều lĩnh vực khác và băng
+                                tải lưới chịu nhiệt (PTFE) có các tính năng sau:
+
+                                <br><br>
+                                <ol type="1">
+                                    <li>Nhiệt độ: Ổn định về chiều từ -73 ° đến + 260 ° C đai chịu nhiệt không độc hại,
+                                        không
+                                        mùi, các quy định thực phẩm của EU và tuân thủ FDA (21 CFR 177.1550) để sử dụng
+                                        trong
+                                        chế biến tiếp xúc với thực phẩm và bao bì. Ngoài ra, dây đai chịu nhiệt PTFE có
+                                        độ bền
+                                        vượt trội và độ giãn dài cực thấp</li><br>
+                                    <li>Tính mềm dẻo: Nếu vật liệu bị cuốn vào trong puli truyền động, dây đai thì cuộn
+                                        càng
+                                        nhỏ băng tải sẽ trở nên càng linh hoạt. Vật liệu sản phẩm mỏng hơn (0.01” và
+                                        thấp hơn)
+                                        sẽ mềm dẻo hơn những vải dày hơn.</li><br>
+                                    <li>Sự bay hơi: Bề mặt của vật liệu có thể từ thô, xốp đến siêu nhẵn sự bay hơi có
+                                        thể
+                                        cho ra kêt quả như mong muốn.</li><br>
+                                    <li>Sức bền: chịu được lực căng và lực kéo cao.</li><br>
+                                    <li>Chống hoá chất, ẩm, vi khuẩn và độc tố...</li><br>
+                                    <li>Ứng dụng: Băng tải lưới chịu nhiệt (PTFE) được ứng dụng rộng rãi trong ngành
+                                        công
+                                        nghiệp tiêu biểu như:
+
+                                        <ul>
+                                            <li><strong>Trong ngành bao bì</strong>: Dùng làm băng chuyền cho máy sấy
+                                                UV ở nhiệt độ cao.
+                                            </li>
+                                            <li><strong>Trong ngành dệt</strong>: Dùng cho hầu hết hệ thống sấy tự động
+                                                như máy in lụa và
+                                                sấy bông vải, máy sấy và co rút vải tự động.</li>
+                                        </ul>
+
+                                    </li>
+                                </ol>
+
+                            </span>
+
+
                         </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="single-features-ads third">
-                            <img src="./img/icons/technique.png" alt="">
-                            <h4>Kỹ thuật cao</h4>
-                            <p>Với Đội ngũ kỹ thuật có hơn 20 năm kinh nghiệm, chúng tôi hoan nghênh bất kỳ yêu
-                                cầu
-                                thách thức nào và phát triển mạnh trong việc cung cấp các giải pháp kỹ thuật
-                                trên
-                                nhiều
-                                loại sản phẩm của chúng tôi.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="single-features-ads first">
-                            <img src="./img/icons/f-delivery.png" alt="">
-                            <h4>Giao hàng nhanh</h4>
-                            <p>Bộ phận kỹ thuật toàn thời gian của chúng tôi luôn sẵn sàng để đảm bảo tất cả các
-                                sản phẩm đã cắt đi đúng quy cách của khách hàng vào ngày chúng được đặt hàng từ
-                                cửa
-                                hàng
-                                trực tuyến của chúng tôi.</p>
-                        </div>
+                        <div class="show-more">Xem thêm</div>
                     </div>
                 </div>
+                <div class="row product-list" id="product-list">
+
+                </div>
             </div>
-        </div>
     </section>
-    <!-- Features Section End -->
+    <!-- Latest Product End -->
 
     <!-- Logo Section Begin -->
     <div class="logo-section spad">
@@ -236,6 +253,7 @@
     </div>
     <!-- Logo Section End -->
 
+
     <!-- Footer Section Begin -->
     <footer class="footer-section spad">
         <div class="container">
@@ -246,8 +264,7 @@
                         <div class="single-footer-widget text-left">
                             <h4>Địa Chỉ</h4>
                             <ul>
-                                <li>362/109 Hiệp Thành 13, Khu Phố 7, Phường Hiệp Thành, Quận 12, Thành phố Hồ
-                                    Chí
+                                <li>362/109 Hiệp Thành 13, Khu Phố 7, Phường Hiệp Thành, Quận 12, Thành phố Hồ Chí
                                     Minh
                                 </li>
                             </ul>
@@ -323,7 +340,7 @@
     <script src="js/jquery.nice-select.min.js"></script>
     <script src="js/mixitup.min.js"></script>
     <script src="js/main.js"></script>
-    <script src="./js/service.js"></script>
+    <script src="./js/products/ChiuNhiet.js"></script>
 </body>
 
 </html>
